<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.keeptang.ui.home.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.keeptang.ui.calendar.CalendarFragment"
        android:label="@string/nav_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_charts"
        android:name="com.example.keeptang.ui.charts.ChartsFragment"
        android:label="@string/nav_chart"
        tools:layout="@layout/fragment_charts" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.example.keeptang.ui.more.MoreFragment"
        android:label="@string/nav_more"
        tools:layout="@layout/fragment_more" />
</navigation>