<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.more.MoreFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_main"
        android:scaleType="centerCrop"
        android:importantForAccessibility="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_more"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/btn_points_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@null"
                    android:src="@drawable/icon_point_coin" />

                <TextView
                    android:id="@+id/tv_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/default_points"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_corner_white"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/btn_menu_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/icon_menu_store"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_menu_store"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/icon_menu_store"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/more_reward_shop"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_menu_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/icon_menu_categories"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_menu_categories"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/icon_menu_categories"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/more_manage_categories"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_menu_bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/icon_menu_bank"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_menu_bank"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/icon_menu_bank"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/more_link_bank"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>