<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.charts.ChartsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_main"
        android:scaleType="centerCrop"
        android:contentDescription="@null" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_chart"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:textColor="@color/black" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:padding="8dp">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_point_coin"
                    android:contentDescription="@null" />
                <TextView
                    android:id="@+id/tv_points_chart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_points"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp" />
            </LinearLayout>
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/toggle_group_charts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/toggle_paid"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/paid"
                android:background="@drawable/button_selector_yellow"
                android:textColor="@color/button_text_selector_black"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:checked="true" />

            <RadioButton
                android:id="@+id/toggle_income"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:background="@drawable/button_selector_yellow"
                android:textColor="@color/button_text_selector_black"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <RadioButton
                android:id="@+id/toggle_trend"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Trend"
                android:background="@drawable/button_selector_yellow"
                android:textColor="@color/button_text_selector_black"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                tools:ignore="HardcodedText" />

        </RadioGroup>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="16dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/white">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_chart_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                tools:listitem="@layout/list_item_chart_summary"
                tools:itemCount="3" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</FrameLayout>