<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.input.AddTransactionFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_input"
        android:scaleType="centerCrop"
        android:contentDescription="@null" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon_back"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/icon_back"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/nav_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Input"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black"
                    tools:ignore="HardcodedText" />

                <ImageView
                    android:id="@+id/icon_save"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/icon_confirm"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/nav_save" />

            </RelativeLayout>

            <RadioGroup
                android:id="@+id/toggle_group_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="24dp">

                <RadioButton
                    android:id="@+id/toggle_paid"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/paid"
                    android:background="@color/yellow_tint"
                    android:textColor="@color/black"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="12dp"
                    android:layout_marginEnd="8dp"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/toggle_income"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="12dp"
                    android:layout_marginStart="8dp"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textColor="@color/gray"
                android:layout_marginTop="24dp"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Name"
                android:inputType="text"
                android:background="@drawable/rounded_edittext_white"
                android:padding="16dp"
                android:layout_marginTop="8dp"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amount"
                android:textColor="@color/gray"
                android:layout_marginTop="16dp"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="฿ 0"
                android:inputType="numberDecimal"
                android:background="@drawable/rounded_edittext_white"
                android:padding="16dp"
                android:layout_marginTop="8dp"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Category"
                android:textColor="@color/gray"
                android:layout_marginTop="16dp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn_ai_category_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Not Selected"
                android:textColor="@color/black"
                android:background="@drawable/rounded_edittext_white"
                android:padding="16dp"
                android:layout_marginTop="8dp"
                android:gravity="start|center_vertical"
                app:drawableEndCompat="@android:drawable/ic_menu_edit" />
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/dim_background_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000"
        android:visibility="gone" />

</FrameLayout>